fix(calendar): overflow cutting of the last hour block

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,9 @@
 }
 
 body {
+  height: 100vh;
+  margin: 0;
+  padding: 0;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
